# FFMPEG-Sample

./: settings.gradle
app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/com/elim/fmpsample/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: native-lib.cpp
app/src/main/cpp/include/libavcodec/: avcodec.h  version.h
app/src/main/cpp/include/libavformat/: avformat.h  version.h
app/src/main/java/com/elim/fmpsample/: MainActivity.java
app/src/main/java/com/elim/fmpsample/core/: NativeCallback.java  RtspClient.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
app/src/test/java/com/elim/fmpsample/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
